--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,30 @@
-<div class="centralizado">
-  <h1>
-    Novo Cliente
-  </h1>
+<head>
 
+</head>
+<body>
+  <div class="centralizado">
+    <h1>
+      Novo Cliente
+    </h1>
+    
   <form #form="ngForm" id="form">
     <div class="form-group">
       <label for="nomeCliente">Nome</label>
-      <input type="text" class="form-control" [(ngModel)]="cliente.nome" name="nome" id="nomeCliente" placeholder="novo@cliente.com">
+      <input type="text" class="form-control" [(ngModel)]="cliente.nome" name="nome" id="nomeCliente" placeholder="Sara Regina Mondeo">
     </div>
     <div class="form-group">
       <label for="limiteCredito">Limite de Crédito</label>
-      <input type="number" class="form-control" [(ngModel)]="cliente.limite" name="limite" id="limiteCredito" placeholder="R$ 9.999,99">
+      <input type="text" class="form-control" #limite (input)="this.mask.money(limite)" [(ngModel)]="cliente.limite" name="limiteCredito" id="limiteCredito" placeholder="R$ 9.999,99">
     </div>
     <div class="form-group">
       <label for="risco">Risco</label>
       <select class="form-control" [(ngModel)]="cliente.risco" name="risco" id="risco">
         <option>A</option>
         <option>B</option>
-        <option>C</option>
+        <option>C</option> 
       </select>
     </div>
-    <button type="submit" (click)="salvar(form)" class="btn btn-default">Cadastrar</button>
+    <button type="submit" (click)="salvar()" class="btn btn-default">Cadastrar</button>
   </form>
 </div>
 
@@ -45,11 +49,12 @@
       <tr *ngFor="let cliente of clientes">
         <th scope="row">{{cliente.id}}</th>
         <td>{{cliente.nome}}</td>
-        <td>R$ {{cliente.limite}}</td>
+        <td>R$ {{this.mask.floatToMoney(cliente.limite)}}</td>
         <td>{{cliente.risco}}</td>
         <td>{{cliente.taxa}}%</td>
       </tr>      
     </tbody>
   </table>
 </div>
-  
+</body>
+
