ajuste dos testes de maskService

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   <form #form="ngForm" id="form">
     <div class="form-group">
       <label for="nomeCliente">Nome</label>
-      <input type="text" class="form-control" [(ngModel)]="cliente.nome" name="nome" id="nomeCliente" placeholder="Sara Regina Mondeo">
+      <input type="text" class="form-control" [(ngModel)]="cliente.nome" name="nome" id="nomeCliente" placeholder="Ex: Sara Regina Mondeo">
     </div>
     <div class="form-group">
       <label for="limiteCredito">Limite de Crédito</label>
