--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <form #form="ngForm" id="form">
     <div class="form-group">
       <label for="nomeCliente">Nome</label>
-      <input type="text" class="form-control" [(ngModel)]="cliente.nome" name="nome" id="nomeCliente" placeholder="Ex: Sara Regina Mondeo">
+      <input type="text" maxlength="50" class="form-control" [(ngModel)]="cliente.nome" name="nome" id="nomeCliente" placeholder="Ex: Sara Regina Mondeo">
     </div>
     <div class="form-group">
       <label for="limiteCredito">Limite de Crédito</label>
