ajuste do metodo floatToMoney

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
   </form>
 </div>
 
-<div id="listagemClientes">
+<div id="listagemClientes" *ngIf="pesquisado">
   <div class="label-nenhum-cliente-cadastrado centralizado" *ngIf="!clientes.length">  
     Nenhum cliente cadastrado
   </div>  
