--- a/src/pages/cliente/cliente.component.html
+++ b/src/pages/cliente/cliente.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="form-group">
       <label for="limiteCredito">Limite de Crédito</label>
-      <input type="text" class="form-control" #limite (input)="this.mask.money(limite)" [(ngModel)]="cliente.limite" name="limiteCredito" id="limiteCredito" placeholder="R$ 9.999,99">
+      <input type="text" class="form-control" #limite (input)="maskMoney(limite)" [(ngModel)]="cliente.limite" name="limiteCredito" id="limiteCredito" placeholder="R$ 9.999,99">
     </div>
     <div class="form-group">
       <label for="risco">Risco</label>
